--- a/web/index.html
+++ b/web/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <base href="$FLUTTER_BASE_HREF">
+    <base href="$FLUTTER_BASE_HREF">
 
-  <meta charset="UTF-8">
-  <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Hospital Appointment System">
+    <meta charset="UTF-8">
+    <meta content="IE=Edge" http-equiv="X-UA-Compatible">
+    <meta name="description" content="Hospital Appointment System">
 
-  <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="hos_app">
-  <link rel="apple-touch-icon" href="icons/Icon-192.png">
+    <!-- iOS meta tags & icons -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="hos_app">
+    <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>hos_app</title>
-  <link rel="manifest" href="manifest.json">
+    <title>hos_app</title>
+    <link rel="manifest" href="manifest.json">
 
-  <!-- 🔥 Google Maps JavaScript API (Web) -->
-  <script
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTCbGBlsVLOg1fsCSXUfPwymyGwBYjq-k&libraries=places"
-          defer>
-  </script>
+    <!-- Google Maps JavaScript API -->
+    <script
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTCbGBlsVLOg1fsCSXUfPwymyGwBYjq-k&libraries=places"
+            defer>
+    </script>
 </head>
 
 <body>
-<!-- Flutter App -->
 <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
